# ecommerce

./: pyproject.toml
mainapp/: mixins.py
